# agent

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SELF-HOST.md  docker-compose.yml  pyproject.toml  test_stream.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  basic.py  can.py  can_basic.py  demo_field_unit.py  demo_ground_station.py  gateway_ble_relay.py  i2c_bme280.py  mac_metrics.py  mavlink.py  mavlink_basic.py  mqtt.py  pyproject.toml  thermal_camera.py
plexus/: __init__.py  __main__.py  _log.py  buffer.py  cli.py  client.py  commands.py  config.py  connector.py  deps.py  detect.py  streaming.py  tui.py  typed_commands.py  ws.py
plexus/adapters/: __init__.py  base.py  ble.py  can.py  can_detect.py  mavlink.py  mavlink_detect.py  modbus.py  mqtt.py  opcua.py  registry.py  serial_adapter.py
plexus/cameras/: __init__.py  auto.py  base.py  picamera.py  thermal.py  usb.py
plexus/importers/: __init__.py  rosbag.py
plexus/sensors/: __init__.py  ads1115.py  adxl345.py  auto.py  base.py  bh1750.py  gps.py  ina219.py  magnetometer.py  mpu6050.py  sht3x.py  spi_scan.py  system.py  vl53l0x.py
scripts/: plexus.service  release.sh  scan_buses.py  setup.sh
skills/plexus/: SKILL.md
skills/plexus/references/: api.md  sdk.md
tests/: test_basic.py  test_buffer.py  test_can_adapter.py  test_config.py  test_connector.py  test_gps.py  test_mavlink_adapter.py  test_modbus_adapter.py  test_mqtt_adapter.py  test_retry.py  test_sensor_hub.py  test_serial_adapter.py  test_thermal.py  test_video.py  test_ws.py
