[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexus-python"
version = "0.4.2"
description = "Thin Python SDK for Plexus — send telemetry in one line"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Plexus", email = "hello@plexus.dev" }
]
keywords = ["telemetry", "iot", "hardware", "observability", "fleet", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "websockets>=12"]

[project.scripts]
plexus = "plexus.cli:main"

[project.urls]
Homepage = "https://plexus.dev"
Documentation = "https://docs.plexus.dev"
Repository = "https://github.com/plexus-oss/plexus-python"
Issues = "https://github.com/plexus-oss/plexus-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["plexus"]

[tool.ruff]
line-length = 100
target-version = "py38"
