[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexus-python"
version = "0.6.2"
description = "Thin Python SDK for Plexus — send telemetry in one line"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Plexus", email = "hello@plexus.dev" }
]
keywords = ["telemetry", "iot", "hardware", "observability", "fleet", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = [
    "websocket-client>=1.7",
]

[project.optional-dependencies]
# Video/camera support: frame encoding, thermal cameras, etc.
# I2C thermal sensors additionally need a board-specific driver installed
# separately on the device (e.g. adafruit-circuitpython-mlx90640 — requires
# Raspberry Pi hardware libs and doesn't install on other platforms).
video = ["Pillow>=12.2.0", "opencv-python-headless>=4.8", "numpy>=1.24"]
dev = ["pytest>=9.0.3", "pytest-cov", "ruff", "websockets>=12", "opencv-python-headless>=4.8", "numpy>=1.24"]

[project.scripts]
plexus = "plexus.cli:main"

[project.urls]
Homepage = "https://plexus.dev"
Documentation = "https://docs.plexus.dev"
Repository = "https://github.com/plexus-oss/plexus-python"
Issues = "https://github.com/plexus-oss/plexus-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["plexus"]

[tool.ruff]
line-length = 100
target-version = "py38"
